--- a/mobileStyle.css
+++ b/mobileStyle.css
@@ -1,6 +1,7 @@
 body html {
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 
 #logo-corner {
@@ -13,12 +14,12 @@ body html {
     display: flex;
 }
 #logo-corner-name {
-    font-size: 40px;
+    font-size: 44px;
     padding-left: 1vw;
 }
 #img-logo {
     margin-top: -20px;
-    width: 80px;
+    width: 70px;
     position: relative;
     left: 1vw;
     cursor: pointer;
