--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,6 +1,10 @@
 .center-title {
     text-align: center;
     font-size: 2.6rem;
+
+    @include respond(tab-port) {
+        margin: -20px;     
+    }
 }
 
 .page-container {
